[package]
name = "encryption"
version = "0.1.0"
edition = "2021"
authors = ["mrg.foss@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
hex = "0.4.3"
hkdf = "0.12.3"
obfstr = "0.4.3"
sha2 = "0.10.7"
thiserror = "1.0.40"
